--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="recipes/chicken.html">Chicken Recipe</a></li>
-      <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-      <li><a href="recipes/meatloaf.html">Meatloaf Recipe</a></li>
+      <li><a href="recipes/chicken.html">Garlic Chicken Fried Chicken</a></li>
+      <li><a href="recipes/lasagna.html">Instant Pot Lasagna Soup</a></li>
+      <li><a href="recipes/meatloaf.html">Best Meatloaf</a></li>
     </ul>
   </body>
 </html>
